--- a/templates/weather.html
+++ b/templates/weather.html
@@ -43,7 +43,7 @@
         <div class="container">
             <div class="columns">
                 <div class="column is-offset-4 is-4">
-                    {% for weather in weather_data %}
+                    {% for weather in weather_data[:6] %}
                     <div class="box">
                         <article class="media">
                             <div class="media-left">
@@ -69,7 +69,7 @@
         </div>
     </section>
     <footer class="footer">
-        <a class="button is-danger is-large level-item" href="{{ url_for('reset') }}">Reset app</a>
+        <a class="button is-info is-medium level-item" href="https://www.aklato.eu/">Zpět</a>
     </footer>
 </body>
 
