--- a/templates/weather.html
+++ b/templates/weather.html
@@ -13,7 +13,7 @@
     <section class="hero is-info">
         <div class="hero-body">
             <div class="container">
-                <h1 class="title">
+                <h1 class="title has-text-centered">
                     Jaké je počasí?
                 </h1>
             </div>
